--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,145 +4,135 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.activities.LoginFragment">
+    tools:context=".view.fragment.LoginFragment">
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="461dp"
-        android:layout_height="396dp"
-        android:src="@drawable/jdlkfj"
+    <androidx.cardview.widget.CardView
+
+        android:id="@+id/cardView1"
+        android:layout_width="match_parent"
+        android:layout_height="321dp"
+        android:backgroundTint="@color/blue"
+        app:cardCornerRadius="30dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="64dp"
-        android:backgroundTint="#0099FF"
-        android:drawableLeft="@drawable/google_logo"
-        android:textSize="30sp"
-        app:cornerRadius="100dp"
-        app:layout_constraintBottom_toBottomOf="@+id/textView2"
-        app:layout_constraintEnd_toEndOf="@+id/imageView2"
-        app:layout_constraintHorizontal_bias="0.47"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toTopOf="@+id/textView2"
-        tools:ignore="SpeakableTextPresentCheck" />
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="130dp"
+            android:src="@drawable/food" />
 
-    <EditText
-        android:id="@+id/logInserName"
-        android:layout_width="341dp"
-        android:layout_height="72dp"
-        android:background="@drawable/edit_text_style"
-        android:drawableStart="@drawable/ic_baseline_person_24"
-        android:drawablePadding="30dp"
-        android:ems="10"
-        android:hint="User Name"
-        android:inputType="textPersonName"
-        android:minHeight="48dp"
-        app:circularflow_radiusInDP="50dp"
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+
+        android:id="@+id/cardView2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="236dp"
+        android:backgroundTint="@color/lightBlue"
+        app:cardCornerRadius="50dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView3"
+        android:layout_width="370dp"
+        android:layout_height="550dp"
+        android:layout_marginTop="100dp"
+        android:backgroundTint="@color/white"
+        app:cardCornerRadius="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.409" />
+        app:layout_constraintTop_toTopOf="@+id/cardView1">
 
-    <EditText
-        android:id="@+id/logInPassword"
-        android:layout_width="341dp"
-        android:layout_height="72dp"
-        android:background="@drawable/edit_text_style"
-        android:drawableStart="@drawable/ic_baseline_lock_24"
-        android:drawablePadding="30dp"
-        android:ems="10"
-        android:hint="Password"
-        android:inputType="textPassword"
-        android:minHeight="48dp"
-        app:circularflow_radiusInDP="50dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.575" />
+        <Button
+            android:id="@+id/loginRedirectWithNoAction"
+            android:layout_width="150dp"
+            android:layout_height="72dp"
+            android:layout_marginStart="35dp"
+            android:text="@string/login"
+            android:textSize="25dp"
+            android:backgroundTint="@color/blue"
+            android:layout_marginTop="10dp"
+            app:cornerRadius="50dp" />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:text="@string/WelcomeBack"
-        android:textColor="#E1D9D9"
-        android:textSize="40dp"
-        android:textStyle="bold|italic"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.17"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <Button
+            android:id="@+id/signUpRedirect"
+            android:layout_width="160dp"
+            android:layout_height="72dp"
+            android:layout_marginStart="200dp"
+            android:backgroundTint="@color/white"
+            android:textColor="@color/blue"
+            android:text="@string/signUP"
+            android:textSize="25dp"
+            android:layout_marginTop="10dp"
+            app:cornerRadius="50dp" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="76dp"
-        android:text="@string/login"
-        android:textSize="48sp"
-        android:textStyle="bold|italic"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.453"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        <EditText
+            android:id="@+id/logInserName"
+            android:layout_width="325dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="150dp"
+            android:ems="10"
+            android:hint="Enter your email"
+            android:inputType="textPersonName"
+            android:minHeight="48dp"
+            tools:ignore="DuplicateClickableBoundsCheck" />
 
-    <Button
-        android:id="@+id/logInbtn"
-        android:layout_width="219dp"
-        android:layout_height="64dp"
-        android:layout_marginBottom="184dp"
-        android:backgroundTint="#0099FF"
-        android:text="@string/login"
-        android:textSize="30sp"
-        app:cornerRadius="50dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        <EditText
+            android:id="@+id/logInPassword"
+            android:layout_width="325dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="220dp"
+            android:ems="10"
+            android:hint="Enter your password"
+            android:inputType="textPassword"
+            android:minHeight="48dp"
+            tools:ignore="SpeakableTextPresentCheck" />
 
-    <Button
-        android:id="@+id/logInGooglebtn"
-        android:layout_width="224dp"
-        android:layout_height="67dp"
-        android:layout_marginBottom="96dp"
-        android:backgroundTint="#0099FF"
-        android:drawableLeft="@drawable/google_logo"
-        android:text="@string/google"
-        android:textSize="30sp"
-        app:cornerRadius="50dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/logInbtn"
-        app:layout_constraintStart_toStartOf="@+id/logInbtn" />
+        <Button
+            android:id="@+id/logInbtn"
+            android:layout_width="317dp"
+            android:layout_height="64dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="300dp"
+            android:text="@string/login"
+            android:backgroundTint="@color/blue"
+            android:textSize="25dp"
+            app:cornerRadius="50dp" />
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="56dp"
-        android:text="@string/haventAccount"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.133"
-        app:layout_constraintStart_toStartOf="parent" />
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="160dp"
+            android:layout_marginTop="370dp"
+            android:text="OR"
+            android:textSize="30dp"
+            android:textStyle="bold|italic" />
 
-    <TextView
-        android:id="@+id/signUpRedirect"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="9dp"
-        android:text="SignUp"
-        android:textColor="@color/lightBlue"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@+id/textView4"
-        app:layout_constraintStart_toEndOf="@+id/textView4"
-        app:layout_constraintTop_toTopOf="@+id/textView4" />
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/logInGooglebtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="160dp"
+            android:layout_marginTop="420dp"
+            android:backgroundTint="@color/blue"
+            android:clickable="true"
+            android:src="@drawable/google"
+            tools:ignore="SpeakableTextPresentCheck" />
+
+
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
