--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -5,52 +5,63 @@
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.activities.SplashFragment">
-
-    <ImageView
-        android:id="@+id/imageView14"
-        android:layout_width="489dp"
-        android:layout_height="765dp"
-        android:src="@drawable/background"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.505"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    android:background="#DACCCC"
+    android:backgroundTint="@color/blue"
+    tools:context=".view.fragment.SplashFragment">
 
 
-    <pl.droidsonroids.gif.GifImageView
-        android:id="@+id/animationView"
-        android:layout_width="282dp"
-        android:layout_height="223dp"
-        android:layout_marginTop="40dp"
-        android:src="@drawable/animation_500_lcupwrwe"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.683"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/splachWelcome"
-        android:layout_width="356dp"
-        android:layout_height="155dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="104dp"
-        android:text="@string/splachText"
-        android:textSize="40dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/animationView" />
 
     <Button
         android:id="@+id/getStartedbtn"
         android:layout_width="229dp"
         android:layout_height="85dp"
         android:layout_marginBottom="68dp"
-        android:backgroundTint="#0099FF"
+        android:backgroundTint="#FFFFFF"
         android:text="get started"
+        android:textColor="@color/blue"
         android:textSize="24sp"
         app:cornerRadius="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.cardview.widget.CardView
+
+        android:id="@+id/imageview1"
+        android:layout_width="327dp"
+        android:layout_height="321dp"
+        app:cardCornerRadius="170dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" >
+
+        <pl.droidsonroids.gif.GifImageView
+            android:id="@+id/animationView"
+            android:layout_width="327dp"
+            android:layout_height="321dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/food_carousel"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+    </androidx.cardview.widget.CardView>
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="213dp"
+        android:layout_height="112dp"
+        android:layout_marginStart="104dp"
+        android:text="   Enjoy your food"
+        android:textColor="@color/white"
+        android:textSize="48sp"
+        android:textStyle="bold|italic"
+        app:layout_constraintBottom_toTopOf="@+id/getStartedbtn"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageview1"
+        app:layout_constraintVertical_bias="0.552"
+        tools:ignore="NotSibling" />
 </androidx.constraintlayout.widget.ConstraintLayout>
