--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="lightBlue">#0099FF</color>
-    <color name="blue">#20699A</color>
+    <color name="lightBlue">#B7D2E4</color>
+    <color name="blue">#3A87BA</color>
 
 </resources>
