--- a/app/src/main/res/navigation/splach_login_signup_navigator.xml
+++ b/app/src/main/res/navigation/splach_login_signup_navigator.xml
@@ -11,6 +11,9 @@
         <action
             android:id="@+id/action_splashFragment_to_signupFragment"
             app:destination="@id/signupFragment" />
+        <action
+            android:id="@+id/action_splashFragment_to_splach1Fragment"
+            app:destination="@id/splach1Fragment" />
     </fragment>
     <fragment
         android:id="@+id/signupFragment"
@@ -26,6 +29,15 @@
         android:label="LoginFragment" >
         <action
             android:id="@+id/action_loginFragment_to_signupFragment"
+            app:destination="@id/signupFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/splach1Fragment"
+        android:name="com.example.foodplanner.view.fragment.Splach1Fragment"
+        android:label="fragment_splach1"
+        tools:layout="@layout/fragment_splach1" >
+        <action
+            android:id="@+id/action_splach1Fragment_to_signupFragment"
             app:destination="@id/signupFragment" />
     </fragment>
 </navigation>
