--- a/app/src/main/res/layout/activity_meal_details.xml
+++ b/app/src/main/res/layout/activity_meal_details.xml
@@ -34,21 +34,102 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
+
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/mealInstructionDetails"
+                    android:id="@+id/mealCategoryTV"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:text="Instructions"
+                    android:layout_height="49dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:text="Category: "
+                    android:textSize="22sp"
                     android:textColor="#000"
-                    android:textSize="22sp" />
-                
+                    android:textStyle="bold"
+                    tools:layout_editor_absoluteY="316dp" />
+
+                <TextView
+                    android:id="@+id/mealCategoryDetails"
+                    android:layout_width="wrap_content"
+                    android:layout_height="49dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:hint="Category"
+                    android:textSize="22sp"
+                    tools:layout_editor_absoluteY="316dp" />
             </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/mealAreaTV"
+                    android:layout_width="wrap_content"
+                    android:layout_height="41dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="15dp"
+                    android:text="Area: "
+                    android:textColor="#000"
+                    android:textStyle="bold"
+                    android:textSize="22sp" />
+                <TextView
+                    android:id="@+id/mealAreaDetails"
+                    android:layout_width="wrap_content"
+                    android:layout_height="41dp"
+                    android:layout_marginTop="5dp"
+                    android:hint=" area"
+                    android:textSize="22sp" />
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/mealIntegrationTV"
+                android:layout_width="wrap_content"
+                android:layout_height="41dp"
+                android:layout_marginTop="5dp"
+                android:text="Ingredients"
+                android:textSize="22sp"
+                android:textColor="#000"
+                android:textStyle="bold"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/ingredientRecyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+            <TextView
+                android:id="@+id/howToDO"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:text="Steps for the meal:"
+                android:textColor="#000"
+                android:textStyle="bold"
+                android:textSize="22sp" />
+
+            <TextView
+                android:id="@+id/mealInstructionDetails"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:hint="Instructions"
+                android:textSize="22sp" />
+
+            <TextView
+                android:id="@+id/finalResult"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:text="Final result for the meal"
+                android:textColor="#000"
+                android:textStyle="bold"
+                android:textSize="22sp" />
 
             <ImageView
                 android:id="@+id/mealThumDetail"
@@ -60,25 +141,28 @@
                 android:scaleType="fitXY"
                 tools:srcCompat="@drawable/ic_launcher_background" />
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:weightSum="2">
 
+                <Button
+                    android:id="@+id/addToFavMealDetails"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:layout_weight="1"
+                    android:text="Add to favourite" />
 
-            <TextView
-                android:id="@+id/mealCategoryDetails"
-                android:layout_width="wrap_content"
-                android:layout_height="49dp"
-                android:layout_marginEnd="20dp"
-                android:hint="Category"
-                android:textSize="22sp"
-                tools:layout_editor_absoluteY="316dp" />
-
-
-            <TextView
-                android:id="@+id/mealAreaDetails"
-                android:layout_width="wrap_content"
-                android:layout_height="41dp"
-                android:layout_marginTop="5dp"
-                android:hint=" area"
-                android:textSize="22sp" />
+                <Button
+                    android:id="@+id/addToPlanMealDetails"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:layout_weight="1"
+                    android:text="Add to Plan" />
+            </LinearLayout>
 
 
         </LinearLayout>
