--- a/app/src/main/res/navigation/nav_graph_home.xml
+++ b/app/src/main/res/navigation/nav_graph_home.xml
@@ -9,5 +9,23 @@
         android:id="@+id/homeFragment"
         android:name="com.example.foodplanner.view.fragment.HomeFragment"
         android:label="Home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_homeFragment_to_searchHomeFragment2"
+            app:destination="@id/searchHomeFragment2" />
+    </fragment>
+    <fragment
+        android:id="@+id/searchHomeFragment2"
+        android:name="com.example.foodplanner.view.fragment.SearchHomeFragment"
+        android:label="fragment_search_home"
+        tools:layout="@layout/fragment_search_home" >
+        <action
+            android:id="@+id/action_searchHomeFragment2_to_searchFragment2"
+            app:destination="@id/searchFragment2" />
+    </fragment>
+    <fragment
+        android:id="@+id/searchFragment2"
+        android:name="com.example.foodplanner.view.fragment.SearchFragment"
+        android:label="fragment_search"
+        tools:layout="@layout/fragment_search" />
 </navigation>
