--- a/app/src/main/res/layout/fragment_cat.xml
+++ b/app/src/main/res/layout/fragment_cat.xml
@@ -7,7 +7,7 @@
     tools:context=".view.fragment.CatFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recHome"
+        android:id="@+id/catDetailsRecycler"
         android:layout_width="409dp"
         android:layout_height="729dp"
         app:layout_constraintBottom_toBottomOf="parent"
