--- a/app/src/main/res/layout/cat_details.xml
+++ b/app/src/main/res/layout/cat_details.xml
@@ -2,21 +2,20 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="320dp"
+    android:layout_width="150dp"
     app:cardCornerRadius="50dp"
-    android:layout_marginLeft="48dp"
+    android:layout_margin="20dp"
     android:backgroundTint="@color/darkBlue"
-    android:layout_marginTop="20dp"
-    android:layout_height="300dp">
+    android:layout_height="200dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/searConst"
+        android:id="@+id/constLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <androidx.cardview.widget.CardView
-            android:layout_width="320dp"
-            android:layout_height="200dp"
+            android:layout_width="200dp"
+            android:layout_height="120dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -24,7 +23,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
-                android:id="@+id/searImg"
+                android:id="@+id/carDeThum"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -42,15 +41,16 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
-        android:id="@+id/searMeal"
-        android:layout_width="245dp"
-        android:layout_height="69dp"
+        android:id="@+id/catDeName"
+        android:layout_width="140dp"
+        android:layout_height="70dp"
         android:layout_gravity="center"
-        android:layout_marginTop="100dp"
-        android:gravity="center"
+        android:layout_marginLeft="1dp"
+        android:layout_marginTop="65dp"
         android:text="TextView"
+        android:gravity="center"
         android:textColor="@color/white"
-        android:textSize="25dp" />
+        android:textSize="18dp" />
 
 
 </androidx.cardview.widget.CardView>
