--- a/app/src/main/res/navigation/nav_graph_home.xml
+++ b/app/src/main/res/navigation/nav_graph_home.xml
@@ -16,6 +16,9 @@
         <action
             android:id="@+id/action_homeFragment_to_favouriteFragment"
             app:destination="@id/favouriteFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_planFragment"
+            app:destination="@id/planFragment" />
     </fragment>
     <fragment
         android:id="@+id/searchHomeFragment2"
@@ -44,4 +47,9 @@
             android:id="@+id/action_favouriteFragment_to_searchHomeFragment2"
             app:destination="@id/searchHomeFragment2" />
     </fragment>
+    <fragment
+        android:id="@+id/planFragment"
+        android:name="com.example.foodplanner.view.fragment.PlanFragment"
+        android:label="fragment_plan"
+        tools:layout="@layout/fragment_plan" />
 </navigation>
