--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -20,7 +20,7 @@
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
 
-        android:id="@+id/bottomNav"
+        android:id="@+id/bottomNav1"
         android:layout_width="371dp"
         android:layout_height="49dp"
         app:layout_constraintBottom_toBottomOf="parent"
