--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -19,5 +19,10 @@
         android:id="@+id/planFragment"
         android:icon="@android:drawable/ic_menu_recent_history"
         android:title="Plan"/>
+    <item
+        android:id="@+id/profileFragment"
+        android:icon="@drawable/ic_baseline_person_24"
+        android:title="Profile"
+        />
 
 </menu>
