--- a/app/src/main/res/layout/fragment_favourit.xml
+++ b/app/src/main/res/layout/fragment_favourit.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/lightBlue"
     tools:context=".view.fragment.FavouriteFragment">
 
     <LinearLayout
@@ -24,7 +25,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/favRecyclerView"
             android:layout_width="match_parent"
-            android:layout_height="272dp"
+            android:layout_height="match_parent"
             android:layout_marginTop="20dp" />
 
         <TextView
