--- a/app/src/main/res/layout/fragment_search_home.xml
+++ b/app/src/main/res/layout/fragment_search_home.xml
@@ -24,51 +24,51 @@
             android:inputType="textPersonName"
             android:text="" />
 
-        <androidx.gridlayout.widget.GridLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:columnCount="2">
+        <Button
+            android:id="@+id/searchIngredient"
+            android:layout_width="268dp"
+            android:layout_height="70dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="100dp"
+            android:backgroundTint="@color/blue"
+            android:gravity="center"
+            android:text="Ingredient"
+            app:layout_gravity="center"
+            android:textSize="25dp"
+            />
 
-            <Button
-                android:id="@+id/searchIngredient"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="50dp"
-                android:layout_marginTop="250dp"
-                android:gravity="center"
-                android:text="Ingredient"
-                android:backgroundTint="@color/blue"
-                app:layout_gravity="center" />
-
-            <Button
+        <Button
                 android:id="@+id/searchArea"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="100dp"
-                android:layout_marginTop="250dp"
+                android:layout_width="268dp"
+                android:layout_height="70dp"
+            android:layout_gravity="center"
+                android:layout_marginTop="30dp"
                 android:backgroundTint="@color/blue"
-                android:text="Area" />
+                android:text="Area"
+            android:textSize="25dp"
+            />
 
             <Button
                 android:id="@+id/searchCategory"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="50dp"
-                android:layout_marginTop="100dp"
+                android:layout_width="268dp"
+                android:layout_height="70dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="30dp"
                 android:backgroundTint="@color/blue"
-
-                android:text="Category" />
+                android:text="Category"
+                android:textSize="25dp"
+                />
 
             <Button
                 android:id="@+id/searchName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="100dp"
-                android:layout_marginTop="100dp"
+                android:layout_width="268dp"
+                android:layout_height="70dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="30dp"
                 android:backgroundTint="@color/blue"
-
-                android:text="Name" />
-        </androidx.gridlayout.widget.GridLayout>
+                android:text="Name"
+                android:textSize="25dp"
+                />
     </LinearLayout>
 
 </FrameLayout>
